Mon Sep  6 10:57:40 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/lib/tk/menu.rb(TkOptionMenubutton#insert): call correct method

Mon Sep  6 07:51:42 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (cvar_cbase): singletons should refer outer cvar scope.
	  [ruby-dev:24223]

	* eval.c (rb_load): should preserve previous ruby_wrapper value.
	  [ruby-dev:24226]

Sat Sep  4 01:14:57 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* eval.c (cvar_cbase): class variables cause SEGV in
	  instance_eval() for fixnums and symbols. [ruby-dev:24213]

Fri Sep  3 17:47:58 2004  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* struct.c (make_struct): remove redefining constant when
	  conflict.  [ruby-dev:24210]

Fri Sep  3 11:31:44 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: Tk.after makes TkCore::INTERP.tk_cmd_tbl grow
	  [ruby-dev:24207]

Fri Sep  3 02:12:48 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c: fix typo [ruby-talk:111266]

	* ext/tk/lib/tk/text.rb: fix typo

	* ext/tk/lib/multi-tk.rb: improve safe-level treatment on slave IPs

Fri Sep  3 01:54:20 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb (extmake): extact target prefix from Makefiles.

	* ext/extmk.rb: already built-in libraries satisfy dependencies.
	  [ruby-dev:24028]

Wed Sep  1 21:16:50 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/lib/tk/spinbox.rb: fix typo

Wed Sep  1 19:28:37 2004  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_proc_exec): label cannot precede variable declarations.

Tue Aug 31 18:20:49 2004  Hirokazu Yamamoto  <ocean@m2.ccsnet.ne.jp>

	* ext/tk/tkutil.c (cbsubst_init): fix memory leak

	* ext/tk/tkutil.c (cbsubst_get_all_subst_keys): fix SEGV

Tue Aug 31 16:04:22 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tcltklib/tcltklib.c (ip_delete): when a tcltkip is deleted,
	  destroy its root widget

Tue Aug 31 12:30:36 2004  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>
