@@ -247,6 +247,7 @@ config.h:
 #define HAVE_GETCWD 1
 #define HAVE_CHSIZE 0
 #define HAVE_TIMES 1
+#define HAVE_FCNTL 1
 #define HAVE_TELLDIR 1
 #define HAVE_SEEKDIR 1
 #define HAVE_MKTIME 1
